[tool.poetry]
name = "home_work9_true"
version = "0.1.0"
description = ""
authors = ["SaifuliAnna <saifulianna.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
phonenumbers = "^8.12.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
